<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_5sdp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvValue"
        android:layout_margin="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/text"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/black"
        />


    <TextView
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:padding="@dimen/_10sdp"
        app:drawableStartCompat="@drawable/ic_search"
        android:background="?selectableItemBackground"
        app:drawableTint="@color/black"
        android:drawablePadding="@dimen/_15sdp"
        />

    <TextView
        android:id="@+id/btnShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:padding="@dimen/_10sdp"
        android:background="?selectableItemBackground"
        app:drawableStartCompat="@drawable/ic_share"
        app:drawableTint="@color/black"
        android:drawablePadding="@dimen/_15sdp"
        />

    <TextView
        android:id="@+id/btnTranslate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/translate"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:padding="@dimen/_10sdp"
        android:background="?selectableItemBackground"
        app:drawableStartCompat="@drawable/ic_translate"
        app:drawableTint="@color/black"
        android:drawablePadding="@dimen/_15sdp"
        />

    <TextView
        android:id="@+id/btnCopy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copy"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:padding="@dimen/_10sdp"
        android:background="?selectableItemBackground"
        app:drawableStartCompat="@drawable/ic_copy"
        app:drawableTint="@color/black"
        android:drawablePadding="@dimen/_15sdp"
        />

</LinearLayout>