<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp">

    <ImageView
        android:id="@+id/scanPrintImg"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:src="@drawable/ic_email"
        app:tint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo"
        />

    <TextView
        android:id="@+id/printValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/value"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintStart_toEndOf="@+id/scanPrintImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/scanPrintImg"
        />
    <TextView
        android:id="@+id/printFormat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/format"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        app:layout_constraintStart_toEndOf="@+id/scanPrintImg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/printValue"
        app:layout_constraintBottom_toBottomOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>